--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ mouse or slide your finger, your view will rotate around it. Consider clicking t
 		</p>
 		<br class="clearboth">
 		<div class="floatL pad15" id="dugout-textures">
-			<iframe width="640" height="480" src="https://sketchfab.com/models/ebc7efd2f44747f9b801210566896f94/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
+			<iframe width="560" height="550" src="modelProxy1.html" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 		</div>
 		<p class="black extrapad">
 This shows the first two habitats finished and home to a crew of 30. Most of the interior hasn't been modeled but the main areas have 
@@ -423,7 +423,7 @@ refine it - and when has colonization ever been achieved without a ton of adapta
 		</p>
 		<br class="clearboth">
 		<div class="floatL pad15">
-			<iframe width="640" height="480" src="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+			<iframe width="560" height="550" src="modelProxy2.html" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 		</div>
 		<p class="black extrapad">
 This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it.
@@ -448,7 +448,7 @@ protected environment of lava tubes. Cloth would also be useful for simple thing
 		</p>
 		<br class="clearboth">
 		<div class="floatL pad15">
-			<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+			<iframe width="560" height="550" src="modelProxy3.html" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 		</div>
 		<p class="black extrapad">
 Here is the first venture into what could be done on the Moon once the scale necessary to build real towns exists. It extends the 
@@ -456,7 +456,7 @@ methods already outlined, and takes advantage of the terrain.
 		</p>
 		<br class="clearboth">
 		<div class="floatL pad15">
-			<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
+			<iframe width="560" height="550" src="modelProxy4.html" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
 		</div>
 		<p class="black extrapad">
 This is a chemical process that will probably be useful on the Moon. A possible alternate approach to obtaining iron is to magnetically 
@@ -470,7 +470,7 @@ be a role for a unit of this kind, if not for this, then for processing of, say,
 		<br class="clearboth">
 		<div class="floatL pad15">
 			<div class="sketchfab-embed-wrapper">
-				<iframe width="640" height="480" src="https://sketchfab.com/models/1be68b1079b54315809e2be3ea8d1a6d/embed"  frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				<iframe width="560" height="550" src="modelProxy5.html"  frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
 		<p class="black extrapad">
