new sketch and commentary for index.html
Former-commit-id: f3e23319325b43784c63cf79b24104567c00b2d6 [formerly 1c038f97bb227e093bb617318c8503fff88e9d73]
Former-commit-id: f1316f5d1f433b8c1b33dc0254536e2fb5b1d548

--- a/index.html
+++ b/index.html
@@ -486,28 +486,41 @@ lava could also optionally be used for construction.
 		<h2>Sketches</h2>
 		<div class="col-10 col-m-11 black30">
 		<p class="roundAll black">
-		This is rough work, here to get the whole plan up on the website for evaluation. First is the dome for the long-range plan of 
-		creating a city. The dome is quartz glass with 6 meters of water on top, and then another layer of quartz glass. That is for radiation 
-		and micro-meteor protection. The net force is outwards once the dome is filled with air, so the blue towers hold the dome down. At the 
-		same time, the upward pull on the cables in the center of the towers is so great, full buildings can be built around them and the net force 
-		would still be slightly upwards on those cables. The tension on them is about 1.5 million metric tons on each one. 
+This is rough work, here to get the whole plan up on the website for evaluation. First is the dome for the long-range plan of 
+creating a city. The dome is quartz glass with 6 meters of water on top, and then another layer of quartz glass. That is for radiation 
+and micro-meteor protection. The net force is outwards once the dome is filled with air, so the blue towers hold the dome down. At the 
+same time, the upward pull on the cables in the center of the towers is so great, full buildings can be built around them and the net force 
+would still be slightly upwards on those cables. The tension on them is about 1.5 million metric tons on each one. 
 		</p>
-		<img src="img/city1.jpg" alt="a glass dome over Lalande Crater">
+		<img src="img/city1.png" alt="a glass dome over Lalande Crater">
 		<p class="roundAll black">
-		The second image shows the cables and framework. The mass of the glass and water isn't an issue once the dome is 
-		filled with air, if anything it helps hold in the air, rather than being a mass that has to be held up. The trick here is to build the 
-		dome, so that it can be filled with air, so that mass is supported. I have thoughts about that, still working on it. Also, if there is a major 
-		meteor strike or some other disaster, and atmosphere is lost, the dome has to remain stable. The cables between the towers and the dome outer 
-		surface are there for that reason, and the towers need to be able to support all that mass if there is no air. 
+The second image shows the cables and framework. The mass of the glass and water isn't an issue once the dome is 
+filled with air, if anything it helps hold in the air, rather than being a mass that has to be held up. The trick here is to build the 
+dome, so that it can be filled with air, so that mass is supported. I have thoughts about that, still working on it. Also, if there is a major 
+meteor strike or some other disaster, and atmosphere is lost, the dome has to remain stable. The cables between the towers and the dome outer 
+surface are there for that reason, and the towers need to be able to support all that mass if there is no air. 
 		</p>
-		<img src="img/city2.jpg" alt="towers and cables supporting glass dome">
+		<img src="img/city2.png" alt="towers and cables supporting glass dome">
 		<p class="roundAll black">
-		And this is the full layout of the colony that will be built showing 'Phase 1'. The idea right now it is to show the full colony at two points 
-		in time - when it has the stuff in the image below, and when the domed city is built. I did this to have a sense of where everything would go, and 
-		how it would all work together. Call it a placeholder for now. I know it has no labels or anything, but it gives a sense of the scale. Everything 
-		blue and green is a habitat, purple is domes, brown is industrial space.
+And this is the full layout of the colony that will be built showing 'Phase 1'. The idea right now it is to show the full colony at two points 
+in time - when it has the stuff in the image below, and when the domed city is built. I did this to have a sense of where everything would go, and 
+how it would all work together. Call it a placeholder for now. I know it has no labels or anything, but it gives a sense of the scale. Everything 
+blue and green is a habitat, purple is domes, brown is industrial space.
 		</p>
 		<img src="img/SketchPhase1-lineDrawing.jpg" alt="map of phase one moon colony">
+		<p class="roundAll black">
+It turns out the construction techniques using molten basalt regolith can also be used with the regolith in the highlands. So, drafting of all the 
+infrastructure in versions adapted to the pole has begun. This is the first one, a hab like the dugouts at Lalande, with a few changes. The 
+sun is always on the horizon at the poles - always, the inclination of the Moon's orbit is only 1.5&deg;, so there are no dark seasons like on Earth. 
+So, there is no reason to put a set of arches over the roof like at Lalande, which are designed to let the sun in through the day. Instead, the 
+walls of the hab are extended upwards so far that the area of sky visible from within the hab is small enough that the accompanying cosmic radiation 
+is not a concern. This is nice, because the side benefit is a large, clear view of the sky through the glazing covering the entire roof. 
+A micrometeorite could easily punch through that glazing, but to hit it, it would have to come in from an angle very far off the ecliptic plane, which 
+meteors rarely do. Also shown is a prefab module in a trench outside the main hab (the light blue thing under the arches covered with regolith to 
+protect it). That is a module for a small initial crew of maybe 4 or 6 people, while the main hab is still under construction. After the dugout is done, 
+the end of the module on the hab side is removed, and the airlock on the other end becomes the airlock for the whole hab.
+		</p>
+		<img src="img/polarhab.png" alt="a habitat for the lunar pole to protect against radiation and micrometeorites">
 		</div>
 	</div>
 	<br>
