add new sketch and commentary to index.html
Former-commit-id: aadb1b1aa1a7b612263c85087b24df708136731e

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ meteors rarely do. Also shown is a prefab module in a trench outside the main ha
 protect it). That is a module for a small initial crew of maybe 4 or 6 people, while the main hab is still under construction. After the dugout is done, 
 the end of the module on the hab side is removed, and the airlock on the other end becomes the airlock for the whole hab.
 		</p>
-		<img src="img/polarhab.png" alt="a habitat for the lunar pole to protect against radiation and micrometeorites">
+		<img src="img/polarhab1.png" alt="a habitat for the lunar pole to protect against radiation and micrometeorites">
 		</div>
 	</div>
 	<br>
