Phase 1 blend file improved
Former-commit-id: cf1533111010dac0e016090c8fc17e14583c9bb6

--- a/index.html
+++ b/index.html
@@ -478,7 +478,6 @@ lava could also optionally be used for construction.
 	</div>
 	<br>
 	<div class="rowR">	
-
 		<div class="col-11 col-m-11 darkYellow">
 			<iframe width="640" height="360" src="https://www.youtube.com/embed/TdYunLnqFj0" frameborder="2" allowfullscreen class="floatR"></iframe>
 		</div>
@@ -492,6 +491,12 @@ and micro-meteor protection. The net force is outwards once the dome is filled w
 same time, the upward pull on the cables in the center of the towers is so great, full buildings can be built around them and the net force 
 would still be slightly upwards on those cables. The tension on them is about 1.5 million metric tons on each one. 
 		</p>
+		
+		
+	<div>
+		<p class="black extrapad"> An interactive model of Phase 1 is in testing. Almost there...
+		</p>
+	</div>
 		<img src="img/city1.png" alt="a glass dome over Lalande Crater">
 		<p class="roundAll black">
 The second image shows the cables and framework. The mass of the glass and water isn't an issue once the dome is 
