test draft b4w dugout model on github site
Former-commit-id: bd1a96f2cb19c3818a47cca11c67e4f43197e7a3 [formerly aefc767208c7619598591b1d8a929c6d14cd9a46]
Former-commit-id: fe5605c63b5fef118dc0e293ce3aa6b230b94de2

--- a/index.html
+++ b/index.html
@@ -396,6 +396,10 @@ bonds that lead to trust and then there is no desire to fight. Getting that feed
 	</div>
 	<br>
 	<div id="sketchfab">
+			<div class="darkYellow pix">
+				<iframe src="modelProxy7.html" frameborder="0" allowfullscreen style="width:704px;height:544px;"></iframe>
+				
+			</div>
 		<p class="black roundAll">
 The Sketchfab 3d models below can be navigated using the buttons that appears in their bottom right corner when they load, 
 after clicking the 'play' arrow. Take the tour through them with the Annotations buttons, to see explanations. 
@@ -491,12 +495,7 @@ and micro-meteor protection. The net force is outwards once the dome is filled w
 same time, the upward pull on the cables in the center of the towers is so great, full buildings can be built around them and the net force 
 would still be slightly upwards on those cables. The tension on them is about 1.5 million metric tons on each one. 
 		</p>
-		
-		
-	<div>
-		<p class="black extrapad"> An interactive model of Phase 1 is in testing. Almost there...
-		</p>
-	</div>
+
 		<img src="img/city1.png" alt="a glass dome over Lalande Crater">
 		<p class="roundAll black">
 The second image shows the cables and framework. The mass of the glass and water isn't an issue once the dome is 
