test html for Gallery Cutaway
Former-commit-id: c6dfdedf5460d277260c7f3152a5758566848d8e [formerly f55b99cd618cee2b3948fe1422ca345b20fa91af]
Former-commit-id: 56fa9496213c4718c03be2006c607a95855af48f

--- a/modelProxy6.html
+++ b/modelProxy6.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <center>
-<a href="webplayer/webplayer.html?load=../blend4web/Phase1.json" style="padding:5px;">
+<a href="webplayer/webplayer.html?load=../blend4web/GalleryCutaway4.json" style="padding:5px;">
 <img src="img/thumb/CraterOverlay640x480.jpg" style="width:640px;height:480px;" class="overlay" alt="Link to 3D model of the Lalande crater">
 </a>
 </center>
