--- a/index.html
+++ b/index.html
@@ -93,21 +93,24 @@ The first colony shall be called Cernan's Promise.
 		</div>
 		<div class="col-33">
 			<script>
-					$('#divRss').FeedEk ({
-					FeedUrl: 'http://moonwards.com/feeds/rss.xml',
-					MaxCount:3,
-					ShowDesc: true,
-					ShowPubDate:false,
-					DescCharacterLimit: 600
-			});
+	$.get('http://www.moonwards.com/feed/rss.xml', function (data) {
+    $(data).find("item").each(function () { // or "item" or whatever suits your feed
+        var el = $(this);
+
+        console.log($"#RSS");.html("p")
+        console.log("title      : " + el.find("title").text());
+        console.log("author     : " + el.find("author").text());
+        console.log("description: " + el.find("description").text());
+    });
+});
 			</script>
-			<div id="divRss">
+			<div id="RSS">
 				
 			</div>
 		</div>
 		<div class="col-33">
-			<div class="intrinsic-container">
-			 see https://benmarshall.me/responsive-iframes/
+			<div class="intrinsic-container intrinsic-container-16x9">
+			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen>..</iframe>
 			</div>
 		</div>
 	</div>
