--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ The first colony shall be called Cernan's Promise.
     $(data).find("item").each(function () { // or "item" or whatever suits your feed
         var el = $(this);
 
-        console.log($"#RSS");.html("p")
+        console.log($"#RSS");.html("p");
         console.log("title      : " + el.find("title").text());
         console.log("author     : " + el.find("author").text());
         console.log("description: " + el.find("description").text());
