--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="js/FeedEk.js"></script>
 	</head>
 <body>
 <!--[if lt IE 8]>
@@ -105,14 +104,35 @@ The first colony shall be called Cernan's Promise.
 });
 			</script>
 			<div id="RSS">
-				
+				test
 			</div>
 		</div>
 		<div class="col-33">
+			<style>.intrinsic-container {  position: relative;
+  height: 0;
+  overflow: hidden;
+}
+.intrinsic-container-16x9 {
+  padding-bottom: 56.25%;
+}
+.intrinsic-container-4x3 {
+  padding-bottom: 75%;
+}
+.intrinsic-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+			</style>
 			<div class="intrinsic-container intrinsic-container-16x9">
-			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen>..</iframe>
+			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
 			</div>
 		</div>
+	</div>
+	<div class="col-33">
+	Really, is anything going to work?
 	</div>
 		
 	
