--- a/index.html
+++ b/index.html
@@ -91,41 +91,11 @@ The first colony shall be called Cernan's Promise.
 		</p>
 		</div>
 		<div class="col-33">
-			<script>
-	$.get('http://www.moonwards.com/feed/rss.xml', function (data) {
-    $(data).find("item").each(function () { // or "item" or whatever suits your feed
-        var el = $(this);
+			<div id="RSS-feed">
 
-        console.log($"#RSS");.html("p");
-        console.log("title      : " + el.find("title").text());
-        console.log("author     : " + el.find("author").text());
-        console.log("description: " + el.find("description").text());
-    });
-});
-			</script>
-			<div id="RSS">
-				test
-			</div>
+		</div>
 		</div>
 		<div class="col-33">
-			<style>.intrinsic-container {  position: relative;
-  height: 0;
-  overflow: hidden;
-}
-.intrinsic-container-16x9 {
-  padding-bottom: 56.25%;
-}
-.intrinsic-container-4x3 {
-  padding-bottom: 75%;
-}
-.intrinsic-container iframe {
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-			</style>
 			<div class="intrinsic-container intrinsic-container-16x9">
 			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
 			</div>
@@ -137,5 +107,52 @@ The first colony shall be called Cernan's Promise.
 		
 	
 </div>
+<script>
+                atom_no = 0; //we'll use this as our counter
+		feed_text = ''; //we'll use this variable to build our innerHTML for complete RSS feed
+                display_no = 3; //set this number to number of last feed items to parse
+			
+
+		$.get('http://93.103.66.197/test/test.xml', function (data) { //you'll change the URL here to the URL of your XML file
+                    atom_count = $(data).find("item").length;
+		    $(data).find("item").each(function () { 
+		        var el = $(this);
+			
+			atom_no = atom_no + 1; //increase counter for each item found
+
+			if (display_no > $(data).find("item").length - atom_no) {
+		        atom_text = ''; //we'll use this variable to build our innerHTML for each RSS feed item
+
+			//now we start building our atom HTML
+			//first by checking if "guid" is defined, and if not we'll generate our element ID with our counter, otherwise use "guid"
+
+			atom_guid = el.find("guid").text();	
+                        if (atom_guid) {
+				atom = '<p id="' + el.find("guid").text() + '" class="atom">';
+	
+			} else {
+				atom = '<p id="xitem' + atom_no + '" class="atom">';
+			}
+			atom = atom + '<span class="datetime">' + el.find("pubDate").text() + '</span>';
+			atom_link = el.find("link").text(); //we'll use this to wrap a link around the title, if link exists
+			if (atom_link) {
+				atom = atom + '<span class="title"><a href="' + atom_link + '">' + el.find("title").text() + '</a></span>';
+			} else {
+				atom = atom + '<span class="title">' + el.find("title").text() + '</span>';
+			}
+			atom = atom + '<span class="description">' + el.find("description").text() + '</span>';	
+			atom = atom + '</p>';
+
+			//if you want reversed order, just say "feed_text = atom + feed_text;"
+			feed_text = feed_text + atom;                        
+			}
+
+		    });
+
+			$("#RSS-feed").html(feed_text);
+	
+		});
+</script>
+
 </body>
 </html>
