new bckgd, add parser, temp revamp files
Former-commit-id: fc6c0c0a2378dac1a82fe0e21baa45e7c037bfa5 [formerly 015a9537e1b1569d47ca578213200d204e608275]
Former-commit-id: 43c728dab951f458e7d41c67aa895e35e5d07f32

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main2.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -23,7 +23,6 @@
 A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 	<header>
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	  	<nav>
 	  		<div id="nav">
   				<ul>
@@ -65,10 +64,11 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
   				</ul>
   			</div>
   		</nav>
+  		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</header>
 <div id="container">
 	<div class="floatL">
-		<div class="col-66 pix">
+		<div class="main pix">
 					<p class="black pad15">
 The first colony in space will fundamentally change the way humanity sees itself and its place in the universe. 
 We don't seek that future only because we don't see its potential.  
@@ -90,12 +90,12 @@ The first colony shall be called Cernan's Promise.
 			</sup> 
 		</p>
 		</div>
-		<div class="col-33">
+		<div class="sidebar">
 			<div id="RSS-feed">
-???
+If you can't see our RSS feed, you need to enable Javascript.
 		</div>
 		</div>
-		<div class="col-33">
+		<div class="sidebar">
 			<div class="intrinsic-container intrinsic-container-16x9">
 			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
 			</div>
