begin including SASS
Former-commit-id: d63cb31419d9e9f20cccf2bb7fcb594e1bacff69 [formerly a157685d46fd19f60d8b41b00db4131053f96835]
Former-commit-id: 333516f051b9c4771c204be6bdf4c3e54ba737da

--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,7 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-		<link rel="stylesheet" href="css/main2.css">
+		<link rel="stylesheet" href="css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -24,7 +22,6 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 <![endif]-->
 	<header>
 	  	<nav>
-	  		<div id="nav">
   				<ul>
   					<li><a href="index.html">Mission</a>
  		 				<ul>
@@ -62,7 +59,6 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
   						</ul>
   					</li>
   				</ul>
-  			</div>
   		</nav>
   		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</header>
@@ -96,16 +92,12 @@ If you can't see our RSS feed, you need to enable Javascript.
 		</div>
 		</div>
 		<div class="sidebar">
-			<div class="intrinsic-container intrinsic-container-16x9">
 			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
-			</div>
 		</div>
 			<div class="col-33">
 	Really, is anything going to work?
 	</div>
 	</div>
-
-		
 	
 </div>
 <script>
