--- a/index.html
+++ b/index.html
@@ -10,84 +10,91 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main.nest.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 <body>
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
-A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
+	<!--[if lt IE 9]>
+	  <script>
+	    document.createElement("header" );
+	    document.createElement("footer" );
+	    document.createElement("section");
+	    document.createElement("aside"  );
+	    document.createElement("nav"    );
+	    document.createElement("article");
+	    document.createElement("hgroup" );
+	    document.createElement("time"   );
+	  </script>
+	  <noscript>
+	     <strong>Warning !</strong>
+	     Because your browser does not support HTML5, some elements are created using JavaScript.
+	     Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
+	  </noscript>
+	<![endif]-->
 	<header>
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	  	<nav>
-	  		<div id="nav">
   				<ul>
-  					<li><a href="index.html">Mission</a>
- 		 				<ul>
+  				<li><a href="index.html">Mission</a>
+ 		 			<!--	<ul>
  		 					<li><a href="index.html#timeline">Timeline</a></li>
- 		 				</ul>
- 		 				<ul>
  		 					<li><a href="index.html#sitemap">Site Map</a></li>
- 		 				</ul>
-  					</li>
-  					<li><a href="colonies.html">Colonies</a>
-  						<ul>
+ 		 				</ul> -->
+  				</li>
+  				<li><a href="colonies.html">Colonies</a>
+  					<!--<ul>
   							<li><a href="colonies.html#lalande">Lalande</a></li>
   							<li><a href="colonies.html#peary">Peary</a></li>
   							<li><a href="colonies.html#orbital">Orbital</a></li>
-  						</ul>
+  						</ul>-->
   					</li>
   					<li><a href="machines.html">Machines</a>
-  						<ul>
+  					<!--	<ul>
   							<li><a href="machines.html#robots">Robots</a></li>
   							<li><a href="machines.html#construction">Construction</a></li>
   							<li><a href="machines.html#power">Power</a></li>
   							<li><a href="machines.html#extraction">Extraction</a></li>
   							<li><a href="machines.html#transport">Transport</a></li>
-  						</ul>
+  						</ul> -->
   					</li>
   					<li><a href="project.html">Project</a>
-  						<ul>
+  					<!--	<ul>
   							<li><a href="project.html#chart">Chart</a></li>
-  						</ul>
+  						</ul> -->
   					</li>
   					<li><a href="learn.html">Learn</a>
-  						<ul>
+  					<!--	<ul>
   							<li><a href="learn.html#interactives">Interactives</a></li>
   							<li><a href="learn.html#lessons">Lessons</a></li>
-  						</ul>
+  						</ul> -->
   					</li>
   				</ul>
-  			</div>
   		</nav>
+			<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</header>
 <div id="container">
 	<div class="floatL">
 		<div class="col-66 pix">
 					<p class="black pad15">
-The first colony in space will fundamentally change the way humanity sees itself and its place in the universe. 
-We don't seek that future only because we don't see its potential.  
-We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can 
+The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
+We don't seek that future only because we don't see its potential.
+We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can
 experience its construction, operations, and daily life. <br><br>
-Its design will be something that could really be built 
-with technology in our reach, 
-and would really work just as presented. Visitors will experience a colony that 
-is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.  
-When people get a sense of that future, the will understand why it matters. Once enough of us understand that, 
+Its design will be something that could really be built
+with technology in our reach,
+and would really work just as presented. Visitors will experience a colony that
+is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.
+When people get a sense of that future, the will understand why it matters. Once enough of us understand that,
 we will act. We'll settle the Moon, and cross perhaps the most important threshold in human history since we mastered fire.
 <br><br>
 The first colony shall be called Cernan's Promise.
 <sup class="yellow tooltipTR">[1]
      				<span style="font-size: 1.3em; line-height: 1.3em;">
-"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind" 
+"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind"
 - Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972
 				</span>
-			</sup> 
+			</sup>
 		</p>
 		</div>
 		<div class="col-33">
@@ -105,20 +112,20 @@ The first colony shall be called Cernan's Promise.
 	</div>
 	</div>
 
-		
-	
+
+
 </div>
 <script>
                 atom_no = 0; //we'll use this as our counter
 		feed_text = ''; //we'll use this variable to build our innerHTML for complete RSS feed
                 display_no = 3; //set this number to number of last feed items to parse
-			
+
 
 		$.get('//www.moonwards.com/feed/rss.xml', function (data) { //you'll change the URL here to the URL of your XML file
                     atom_count = $(data).find("item").length;
-		    $(data).find("item").each(function () { 
+		    $(data).find("item").each(function () {
 		        var el = $(this);
-			
+
 			atom_no = atom_no + 1; //increase counter for each item found
 
 			if (display_no > $(data).find("item").length - atom_no) {
@@ -127,10 +134,10 @@ The first colony shall be called Cernan's Promise.
 			//now we start building our atom HTML
 			//first by checking if "guid" is defined, and if not we'll generate our element ID with our counter, otherwise use "guid"
 
-			atom_guid = el.find("guid").text();	
+			atom_guid = el.find("guid").text();
                         if (atom_guid) {
 				atom = '<p id="' + el.find("guid").text() + '" class="atom">';
-	
+
 			} else {
 				atom = '<p id="xitem' + atom_no + '" class="atom">';
 			}
@@ -141,18 +148,21 @@ The first colony shall be called Cernan's Promise.
 			} else {
 				atom = atom + '<span class="title">' + el.find("title").text() + '</span>';
 			}
-			atom = atom + '<span class="description">' + el.find("description").text() + '</span>';	
+			atom = atom + '<span class="description">' + el.find("description").text() + '</span>';
 			atom = atom + '</p>';
 
 			//if you want reversed order, just say "feed_text = atom + feed_text;"
-			feed_text = feed_text + atom;                        
+			feed_text = feed_text + atom;
 			}
 
 		    });
 
 			$("#RSS-feed").html(feed_text);
-	
+
 		});
+</script>
+<script>
+
 </script>
 
 </body>
