--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 	  	<nav>
   				<ul>
   				<li><a href="index.html">Mission</a>
- 		 			<!--	<ul>
+ 		 			<!--	<ul class="dropdown">
  		 					<li><a href="index.html#timeline">Timeline</a></li>
  		 					<li><a href="index.html#sitemap">Site Map</a></li>
  		 				</ul> -->
   				</li>
   				<li><a href="colonies.html">Colonies</a>
-  					<!--<ul>
+  					<ul class="dropdown">
   							<li><a href="colonies.html#lalande">Lalande</a></li>
   							<li><a href="colonies.html#peary">Peary</a></li>
   							<li><a href="colonies.html#orbital">Orbital</a></li>
-  						</ul>-->
+  						</ul>
   					</li>
   					<li><a href="machines.html">Machines</a>
   					<!--	<ul>
@@ -71,7 +71,12 @@
   					</li>
   				</ul>
   		</nav>
-			<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+			<section>
+				<img class="sec1"src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+				<div class="sec2 bubble">
+				 What would it really be like to live on the Moon?
+				</div>
+			</section>
 	</header>
 <div id="container">
 	<div class="floatL">
