website flexbox layout work
Former-commit-id: d2f4a180ef160570b8b32fbaf29f8bfb3c8258f5

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html lang="en-US">
 	<head>
 		<title>Moonwards</title>
 		<meta charset="utf-8">
@@ -11,8 +11,7 @@
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/main.nest.css">
-		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
-		<script src="js/modernizr-2.8.3.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 <body>
@@ -37,10 +36,10 @@
 	  	<nav>
   				<ul>
   				<li><a href="index.html">Mission</a>
- 		 			<!--	<ul class="dropdown">
+ 		 			<ul class="dropdown">
  		 					<li><a href="index.html#timeline">Timeline</a></li>
  		 					<li><a href="index.html#sitemap">Site Map</a></li>
- 		 				</ul> -->
+ 		 				</ul>
   				</li>
   				<li><a href="colonies.html">Colonies</a>
   					<ul class="dropdown">
@@ -50,35 +49,35 @@
   						</ul>
   					</li>
   					<li><a href="machines.html">Machines</a>
-  					<!--	<ul>
+  					<ul>
   							<li><a href="machines.html#robots">Robots</a></li>
   							<li><a href="machines.html#construction">Construction</a></li>
   							<li><a href="machines.html#power">Power</a></li>
   							<li><a href="machines.html#extraction">Extraction</a></li>
   							<li><a href="machines.html#transport">Transport</a></li>
-  						</ul> -->
+  						</ul>
   					</li>
   					<li><a href="project.html">Project</a>
-  					<!--	<ul>
+  						<ul>
   							<li><a href="project.html#chart">Chart</a></li>
-  						</ul> -->
+  						</ul>
   					</li>
   					<li><a href="learn.html">Learn</a>
-  					<!--	<ul>
+  						<ul>
   							<li><a href="learn.html#interactives">Interactives</a></li>
   							<li><a href="learn.html#lessons">Lessons</a></li>
-  						</ul> -->
+  						</ul>
   					</li>
   				</ul>
   		</nav>
 			<section>
-				<img class="sec1"src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-				<div class="sec2 bubble">
-				 What would it really be like to live on the Moon?
+				<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+				<div class="sec2">
+				 <p class="bubble">What would <br>it really be like to live on the Moon?</p>
 				</div>
 			</section>
 	</header>
-<div id="container">
+
 	<div class="floatL">
 		<div class="col-66 pix">
 					<p class="black pad15">
