landing page layout
Former-commit-id: f146c0181b06f44f68d07d1b1354ad9f0faccc52

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/main.nest.css">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 <body>
@@ -32,7 +32,6 @@
 	     Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
 	  </noscript>
 	<![endif]-->
-	<header>
 	  	<nav>
   				<ul>
   				<li><a href="index.html">Mission</a>
@@ -70,17 +69,16 @@
   					</li>
   				</ul>
   		</nav>
-			<section>
+		<header>
 				<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 				<div class="sec2">
-				 <p class="bubble">What would <br>it really be like to live on the Moon?</p>
+				 <p class="accent">What would it really be like to live on the Moon?</p>
 				</div>
-			</section>
 	</header>
 
-	<div class="floatL">
-		<div class="col-66 pix">
-					<p class="black pad15">
+	<section>
+		<div class="mainDivs">
+					<p >
 The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
 We don't seek that future only because we don't see its potential.
 We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can
@@ -100,7 +98,7 @@ The first colony shall be called Cernan's Promise.
 				</span>
 			</sup>
 		</p>
-		</div>
+	</section>
 		<div class="col-33">
 			<div id="RSS-feed">
 ???
