Layout modernization on body starts
Former-commit-id: a683ef8ab47a5c9d40018666a4dffc2749acb3df [formerly aee85aabece44a03ca1c9c34b81087187b7caa72]
Former-commit-id: c0ce0ba9a1a09c1c1fcff9f56149c280e140c26b

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	</header>
 
 	<section>
-		<div class="mainDivs">
+		<div class="outerDiv">
+			<div class="innerDiv">
 					<p >
 The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
 We don't seek that future only because we don't see its potential.
@@ -98,6 +99,8 @@ The first colony shall be called Cernan's Promise.
 				</span>
 			</sup>
 		</p>
+	</div>
+</div>
 	</section>
 		<div class="col-33">
 			<div id="RSS-feed">
