'sass flexbox main page restyle'
Former-commit-id: 2585162817fd9e9da21d408a561b37f78baf1ced

--- a/index.html
+++ b/index.html
@@ -72,54 +72,48 @@
 		<header>
 				<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 				<div class="sec2">
-				 <p class="accent">What would it really be like to live on the Moon?</p>
+				 <p class="accent">What would it really be like<br> to live on the Moon?</p>
 				</div>
 	</header>
-
+<div class="container">
 	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
+			<div class="outerDiv">
+				<div class="innerDiv">
 					<p >
-The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
-We don't seek that future only because we don't see its potential.
-We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can
-experience its construction, operations, and daily life. <br><br>
-Its design will be something that could really be built
-with technology in our reach,
-and would really work just as presented. Visitors will experience a colony that
-is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.
-When people get a sense of that future, the will understand why it matters. Once enough of us understand that,
-we will act. We'll settle the Moon, and cross perhaps the most important threshold in human history since we mastered fire.
-<br><br>
-The first colony shall be called Cernan's Promise.
-<sup class="yellow tooltipTR">[1]
-     				<span style="font-size: 1.3em; line-height: 1.3em;">
-"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind"
-- Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972
-				</span>
-			</sup>
-		</p>
-	</div>
-</div>
-	</section>
-		<div class="col-33">
-			<div id="RSS-feed">
-???
-		</div>
-		</div>
-		<div class="col-33">
-			<div class="intrinsic-container intrinsic-container-16x9">
-			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec" allowfullscreen></iframe>
+	The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
+	We don't seek that future only because we don't see its potential.
+	We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can
+	experience its construction, operations, and daily life. <br><br>
+	Its design will be something that could really be built
+	with technology in our reach,
+	and would really work just as presented. Visitors will experience a colony that
+	is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.
+	When people get a sense of that future, the will understand why it matters. Once enough of us understand that,
+	we will act. We'll settle the Moon, and cross perhaps the most important threshold in human history since we mastered fire.
+	<br><br>
+	The first colony shall be called Cernan's Promise.
+					<sup class="yellow tooltipTR">[1]<span style="font-size: 1.3em; line-height: 1.3em;">
+					"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind"
+					- Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972</span></sup>
+				</p>
 			</div>
 		</div>
-			<div class="col-33">
-	Really, is anything going to work?
-	</div>
-	</div>
+	</section>
 
-
-
+<aside>
+		<div class="sideDiv"id="RSS-feed">
+If you can't see our RSS feed, you need to enable Javascript
+		</div>
+		<div class="sideDiv">
+			<div class="framewrap frame16x9">
+			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec"  allowfullscreen></iframe>
+				</div>
+		</div>
+</aside>
 </div>
+
+
+
 <script>
                 atom_no = 0; //we'll use this as our counter
 		feed_text = ''; //we'll use this variable to build our innerHTML for complete RSS feed
