--- a/colonies.html
+++ b/colonies.html
@@ -10,62 +10,93 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/cssportal.tooltip.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
+		<link rel="stylesheet" href="css/content.nest.css">
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
 		<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
-A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
-	<header>
-		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-	  	<nav>
-	  		<div id="nav">
-  				<ul>
-  					<li><a href="index.html">Mission</a>
- 		 				<ul>
- 		 					<li><a href="index.html#timeline">Timeline</a></li>
- 		 				</ul>
- 		 				<ul>
- 		 					<li><a href="index.html#sitemap">Site Map</a></li>
- 		 				</ul>
-  					</li>
-  					<li><a href="colonies.html">Colonies</a>
-  						<ul>
-  							<li><a href="colonies.html#lalande">Lalande</a></li>
-  							<li><a href="colonies.html#peary">Peary</a></li>
-  							<li><a href="colonies.html#orbital">Orbital</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="machines.html">Machines</a>
-  						<ul>
-  							<li><a href="machines.html#robots">Robots</a></li>
-  							<li><a href="machines.html#construction">Construction</a></li>
-  							<li><a href="machines.html#power">Power</a></li>
-  							<li><a href="machines.html#extraction">Extraction</a></li>
-  							<li><a href="machines.html#transport">Transport</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="project.html">Project</a>
-  						<ul>
-  							<li><a href="project.html#chart">Chart</a></li>
-  						</ul>
-  					</li>
-  					<li><a href="learn.html">Learn</a>
-  						<ul>
-  							<li><a href="learn.html#interactives">Interactives</a></li>
-  							<li><a href="learn.html#lessons">Lessons</a></li>
-  						</ul>
-  					</li>
-  				</ul>
-  			</div>
-  		</nav>
-	</header>
-<div id="container">
+	<!--[if lt IE 9]>
+	  <script>
+	    document.createElement("header" );
+	    document.createElement("footer" );
+	    document.createElement("section");
+	    document.createElement("aside"  );
+	    document.createElement("nav"    );
+	    document.createElement("article");
+	    document.createElement("hgroup" );
+	    document.createElement("time"   );
+	  </script>
+	  <noscript>
+
+	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
+			 Really, on behalf of The Web, please upgrade to a modern browser and don't turn off Javascript.
+			 Thank you, thank you, thank you.
+			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
+			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
+
+
+	  </noscript>
+	<![endif]-->
+	<nav>
+			<ul>
+			<li><a href="index.html">Mission</a>
+			<ul class="dropdown">
+					<li><a href="index.html#timeline">Timeline</a></li>
+					<li><a href="index.html#sitemap">Site Map</a></li>
+				</ul>
+			</li>
+			<li><a href="colonies.html">Colonies</a>
+				<ul class="dropdown">
+						<li><a href="colonies.html#lalande">Lalande</a></li>
+						<li><a href="colonies.html#peary">Peary</a></li>
+						<li><a href="colonies.html#orbital">Orbital</a></li>
+					</ul>
+				</li>
+				<li><a href="machines.html">Machines</a>
+				<ul>
+						<li><a href="machines.html#robots">Robots</a></li>
+						<li><a href="machines.html#construction">Construction</a></li>
+						<li><a href="machines.html#power">Power</a></li>
+						<li><a href="machines.html#extraction">Extraction</a></li>
+						<li><a href="machines.html#transport">Transport</a></li>
+					</ul>
+				</li>
+				<li><a href="project.html">Project</a>
+					<ul>
+						<li><a href="project.html#chart">Chart</a></li>
+					</ul>
+				</li>
+				<li><a href="learn.html">Learn</a>
+					<ul>
+						<li><a href="learn.html#interactives">Interactives</a></li>
+						<li><a href="learn.html#lessons">Lessons</a></li>
+					</ul>
+				</li>
+			</ul>
+	</nav>
+<header>
+		<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+		<div class="sec2">
+		 <p class="accent">What would it really be like<br> to live on the Moon?</p>
+		</div>
+</header>
+<div class="container">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h1>Lalande Crater: Young, Equatorial, Mineral-rich</h1>
+				<p>
+The first virtual colony being built is a town beside Lalande Crater. It is
+there because the region has the Moon's highest concentrations of rare earth
+elements, including T
+				</p>
+			</div>
+		</div>
+	</section>
+	<aside>
+	</aside>
 </div>
+
+
 </body>
 </html>
