content page layout, new background
Former-commit-id: ee6c9763192d5f9afb18443686145db33bf3edd6

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/main.nest.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -27,9 +28,15 @@
 	    document.createElement("time"   );
 	  </script>
 	  <noscript>
-	     <strong>Warning !</strong>
-	     Because your browser does not support HTML5, some elements are created using JavaScript.
-	     Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
+
+	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
+			 Really, on behalf of The Web, please upgrade to a modern browser
+			 and don't turn off Javascript.
+			 Thank you, thank you, thank you.
+			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
+			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
+
+
 	  </noscript>
 	<![endif]-->
 	  	<nav>
@@ -78,28 +85,68 @@
 <div class="container">
 	<section>
 			<div class="outerDiv">
-				<div class="innerDiv">
-					<p >
-	The first colony in space will fundamentally change the way humanity sees itself and its place in the universe.
-	We don't seek that future only because we don't see its potential.
-	We plan to change that. We're building a detailed virtual model of a lunar colony, where visitors can
-	experience its construction, operations, and daily life. <br><br>
-	Its design will be something that could really be built
-	with technology in our reach,
-	and would really work just as presented. Visitors will experience a colony that
-	is profitable and growing, headed towards status as an important independent economy, ecosystem, and culture.
-	When people get a sense of that future, the will understand why it matters. Once enough of us understand that,
-	we will act. We'll settle the Moon, and cross perhaps the most important threshold in human history since we mastered fire.
+				<div class="innerDiv intro">
+					<h1>Realistic Lunar Colony, Coming Online</h1>
+					<p>
+This project is building a series of virtual colonies on the Moon. They will be
+richly detailed and interactive presentations that are entirely
+plausible, technically and scientifically.
+They will examine all the questions, consider all the implications. When humanity
+undertakes ventures on the scale of space settlement, it matters a great deal
+how many people have given it real thought beforehand. These colonies serve
+that purpose.
 	<br><br>
-	The first colony shall be called Cernan's Promise.
-					<sup class="yellow tooltipTR">[1]<span style="font-size: 1.3em; line-height: 1.3em;">
-					"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind"
-					- Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972</span></sup>
+The first colony created will show a full town with a population of 20,000.
+It will have developed industries and facilities, spacious beautiful
+architecture, transport systems moving high volumes of people and cargo around
+the Moon and the solar system. It shows what happens just beyond the tipping
+point, when technology enables a space boom. To evaluate the importance of
+space exploration, this is the stage that must be understood.
+	<br><br>
+The next two colonies work outwards from there... forwards to the city that
+grows from the town, when technology allows a segmented glass dome to be placed over
+a crater 22 km across, becoming home to a million people... and backwards to
+the first missions that develop the basic techniques and infrastructure that
+make it all possible.
+	<br><br>
+These environments will be places to explore, create, collaborate, tell stories,
+and above all to learn and to contemplate our future. To that end, the project
+assumes an ideal political environment, in which a broad alliance of countries
+pursues lunar settlement with determination and vision, making the best
+technical decisions and investing as much as it takes to do it properly. In this
+way the project can educate regarding the real gamut of options before us,
+and the complete scope of such a vast endeavor.
+	<br><br>
+The entire project will always be open source, free of copyright, and free of
+charge. In this way, as long as it has a strong core
+framework, it has incredible potential for growth. Some virtual world project
+along these lines is going to explode in the near future. The time is right.
+Once a world is vivid enough, and provides the right tools, it will mushroom
+as talented people see the potential and dive in. Never have there
+existed ways for so very many people to collaborate so powerfully.
+Moonwards can reach towards two final frontiers -
+the one above our heads, and the one inside our heads. Let us see how powerful
+vision can be.
+	<br><br>
+All the project's files are on the <a href="https://github.com/briligg/moonwards">
+GitHub repository of Moonwards</a>. It is at
+an early stage. It will always be 'under construction', though - that's its
+nature. You will see this revamped website filling out in the coming weeks,
+and then get new content regularly as the project advances. The same
+will happen to the repo, after that. You will see the models changing and new
+models being added, animated, and supplemented with other media.
+When the first, simple version of the virtual colony comes online, then we are
+really rolling. If you are
+inclined to take part, please contact me, comment in one of the sections
+provided, or use the other contact
+options shown on the <a href="project.html">Project</a> page.
 				</p>
+				<p class="byline">
+				Jan. 11, 2017 by Kim -- kim@moonwards.com
+			</p>
 			</div>
 		</div>
 	</section>
-
 <aside>
 		<div class="sideDiv"id="RSS-feed">
 If you can't see our RSS feed, you need to enable Javascript
@@ -111,7 +158,19 @@ If you can't see our RSS feed, you need to enable Javascript
 		</div>
 </aside>
 </div>
-
+<div class="container">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<p>There is going to be some missing content and general disarray for
+					a little as all the content of this site is reformatted and
+					redesigned. It shouldn't take too long to get back in shape. I just
+					feel a need to mention it - so much to do...
+				</p>
+			</div>
+		</div>
+	</section>
+</div>
 
 
 <script>
